--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,17 @@
 		<script type="text/javascript" src="/js/libs/socket.io.js"></script>
 		<script type="text/javascript" src="/js/libs/bower_components/pathfinding/pathfinding-browser.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/styles/app.css">
+		<link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
 	</head>
 
 	<body>
-		<div class="game"></div>
+		<div class="game unselectable">
+			<div class="menu">
+				<div class="player player-left"></div>
+				<div class="player score"></div>
+				<div class="player player-right"></div>
+			</div>
+		</div>
 		<script type="text/javascript" src="/js/app.js"></script>
 	</body>
 </html>
