--- a/index.production.html
+++ b/index.production.html
@@ -1,20 +1,21 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-		<script type="text/javascript" src="/js/libs/socket.io.js"></script>
-		<script type="text/javascript" src="/js/libs/bower_components/pathfinding/pathfinding-browser.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="/styles/app.css">
 		<link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
+		<script src="https://cdn.ravenjs.com/3.17.0/raven.min.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
 		<div class="game unselectable">
+			<!--
 			<div class="menu">
 				<div class="player player-left"></div>
 				<div class="player score"></div>
 				<div class="player player-right"></div>
 			</div>
+			-->
 		</div>
-		<script type="text/javascript" src="/js/app.js"></script>
+		<script src="/dev/bundle.min.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
 </html>
+
