--- a/index.production.html
+++ b/index.production.html
@@ -15,7 +15,7 @@
 			</div>
 			-->
 		</div>
-		<script src="/dev/bundle.min.js" type="text/javascript" charset="UTF-8"></script>
+		<script src="bundle.min.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
 </html>
 
