--- a/index.production.html
+++ b/index.production.html
@@ -6,15 +6,17 @@
 	</head>
 
 	<body>
-		<div class="game unselectable">
-			<!--
-			<div class="menu">
-				<div class="player player-left"></div>
-				<div class="player score"></div>
-				<div class="player player-right"></div>
+		<div class="menu">
+			<div class="container">
+				<div class="name left"></div>
+				<div class="score left"></div>
 			</div>
-			-->
+			<div class="container">
+				<div class="score right"></div>	
+				<div class="name right"></div>
+			</div>
 		</div>
+		<div class="game"></div>
 		<script src="bundle.min.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
 </html>
