--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 		<script src="https://cdn.ravenjs.com/3.17.0/raven.min.js" crossorigin="anonymous"></script>
 	</head>
 
-	<body>
-		<div class="game unselectable">
-			<!--
-			<div class="menu">
-				<div class="player player-left"></div>
-				<div class="player score"></div>
-				<div class="player player-right"></div>
+	<body class="unselectable">
+		<div class="menu">
+			<div class="container">
+				<div class="name left"></div>
+				<div class="score left"></div>
 			</div>
-			-->
+			<div class="container">
+				<div class="score right"></div>	
+				<div class="name right"></div>
+			</div>
 		</div>
+		<div class="game"></div>
 		<script src="/dev/bundle.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
 </html>
