--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 	</head>
 
 	<body class="unselectable">
+		
 		<div class="menu">
 			<div class="container">
-				<div class="name left"></div>
-				<div class="score left"></div>
+				<div>Player One</div>
+				<div class="score-player1"></div>
 			</div>
+			
 			<div class="container">
-				<div class="score right"></div>	
-				<div class="name right"></div>
+				<div class="score-player2"></div>	
+				<div>Player Two</div>
 			</div>
 		</div>
+		
 		<div class="game"></div>
 		<script src="/dev/bundle.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
