change header style

--- a/index.production.html
+++ b/index.production.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<div class="menu">
+		<div class="header">
 			<div class="container">
 				<div>Player One</div>
 				<div class="score-player1"></div>
