--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body class="unselectable">
-		<div class="menu">
+		<div class="header">
 			<div class="container">
 				<div>Player One</div>
 				<div class="score-player1"></div>
