--- a/index.production.html
+++ b/index.production.html
@@ -8,13 +8,15 @@
 	<body>
 		<div class="header">
 			<div class="container">
-				<div>Player One</div>
-				<div class="score-player1"></div>
+				<div class="name">Player One</div>
+				<div class="score score-player1"></div>
+				<div class="scorebar-player1"></div>
 			</div>
 			
 			<div class="container">
-				<div class="score-player2"></div>	
-				<div>Player Two</div>
+				<div class="score score-player2"></div>	
+				<div class="name">Player Two</div>
+				<div class="scorebar-player2"></div>
 			</div>
 		</div>
 		
