start with the carousel by adding listener for dragging

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 		</div>
 		
 		<div class="game"></div>
+		<div class="menu">
+			<div class="patterns"></div>
+		</div>
 		<script src="/dev/bundle.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
 </html>
