refactor generic menu

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 
 	<body class="unselectable">
 		<div class="header">
+			
+			<div class="scorebar">
+				<div class="scorebar-player1"></div>
+				<div class="scorebar-player2"></div>
+			</div>
+			
 			<div class="container">
 				<div class="name">Player One</div>
 				<div class="score score-player1"></div>
-				<div class="scorebar-player1"></div>
+				
 			</div>
+			
+			<div class="burger"></div>
 			
 			<div class="container">
 				<div class="score score-player2"></div>	
