--- a/index.production.html
+++ b/index.production.html
@@ -7,21 +7,27 @@
 
 	<body>
 		<div class="header">
+			<div class="scorebar">
+				<div class="scorebar-player1"></div>
+				<div class="scorebar-player2"></div>
+			</div>
+
 			<div class="container">
 				<div class="name">Player One</div>
 				<div class="score score-player1"></div>
-				<div class="scorebar-player1"></div>
+
 			</div>
-			
+
+			<div class="burger"></div>
+
 			<div class="container">
-				<div class="score score-player2"></div>	
+				<div class="score score-player2"></div>
 				<div class="name">Player Two</div>
 				<div class="scorebar-player2"></div>
 			</div>
 		</div>
-		
+
 		<div class="game"></div>
 		<script src="bundle.min.js" type="text/javascript" charset="UTF-8"></script>
 	</body>
 </html>
-
