--- a/index.production.html
+++ b/index.production.html
@@ -5,7 +5,7 @@
 		<script src="https://cdn.ravenjs.com/3.17.0/raven.min.js" crossorigin="anonymous"></script>
 	</head>
 
-	<body>
+	<body class="unselectable" style="background-color: #0E0A2E;">
 		<div class="header">
 			<div class="scorebar">
 				<div class="scorebar-player1"></div>
@@ -13,7 +13,7 @@
 			</div>
 
 			<div class="container">
-				<div class="name">Player One</div>
+				<div class="name name-player1"></div>
 				<div class="score score-player1"></div>
 
 			</div>
@@ -22,8 +22,7 @@
 
 			<div class="container">
 				<div class="score score-player2"></div>
-				<div class="name">Player Two</div>
-				<div class="scorebar-player2"></div>
+				<div class="name name-player2"></div>
 			</div>
 		</div>
 
