fix the weird side issue

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 	<body class="unselectable" style="background-color: #0E0A2E;">
 		<div class="header">
 			<div class="scorebar">
-				<div class="scorebar-player1"></div>
-				<div class="scorebar-player2"></div>
+				<div class="scorebar-left"></div>
+				<div class="scorebar-right"></div>
 			</div>
 
 			<div class="container">
-				<div class="name name-player1"></div>
-				<div class="score score-player1"></div>
+				<div class="name name-left"></div>
+				<div class="score score-left"></div>
 
 			</div>
 
 			<div class="burger"></div>
 
 			<div class="container">
-				<div class="score score-player2"></div>
-				<div class="name name-player2"></div>
+				<div class="score score-right"></div>
+				<div class="name name-right"></div>
 			</div>
 		</div>
 
