--- a/index.production.html
+++ b/index.production.html
@@ -14,14 +14,14 @@
 
 			<div class="container">
 				<div class="name name-player1"></div>
-				<div class="score score-player1"></div>
+				<div class="score score-left"></div>
 
 			</div>
 
 			<div class="burger"></div>
 
 			<div class="container">
-				<div class="score score-player2"></div>
+				<div class="score score-right"></div>
 				<div class="name name-player2"></div>
 			</div>
 		</div>
