--- a/index.production.html
+++ b/index.production.html
@@ -8,12 +8,12 @@
 	<body class="unselectable" style="background-color: #0E0A2E;">
 		<div class="header">
 			<div class="scorebar">
-				<div class="scorebar-player1"></div>
-				<div class="scorebar-player2"></div>
+				<div class="scorebar-left"></div>
+				<div class="scorebar-right"></div>
 			</div>
 
 			<div class="container">
-				<div class="name name-player1"></div>
+				<div class="name name-left"></div>
 				<div class="score score-left"></div>
 
 			</div>
@@ -22,7 +22,7 @@
 
 			<div class="container">
 				<div class="score score-right"></div>
-				<div class="name name-player2"></div>
+				<div class="name name-right"></div>
 			</div>
 		</div>
 
