--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="name name-left"></div>
 				<div class="score score-left">
 					<div class="score energy-left"></div>
-					<div class="upkeep upkeep-left"></div>
+					<div class="production production-left"></div>
 				</div>
 			</div>
 
@@ -25,7 +25,7 @@
 			<div class="container">
 				<div class="score score-right">
 					<div class="score energy-right"></div>
-					<div class="upkeep upkeep-right"></div>
+					<div class="production production-right"></div>
 				</div>
 				<div class="name name-right"></div>
 			</div>
