--- a/index.production.html
+++ b/index.production.html
@@ -14,14 +14,19 @@
 
 			<div class="container">
 				<div class="name name-left"></div>
-				<div class="score score-left"></div>
-
+				<div class="score score-left">
+					<div class="score energy-left"></div>
+					<div class="production production-left"></div>
+				</div>
 			</div>
 
 			<div class="burger"></div>
 
 			<div class="container">
-				<div class="score score-right"></div>
+				<div class="score score-right">
+					<div class="score energy-right"></div>
+					<div class="production production-right"></div>
+				</div>
 				<div class="name name-right"></div>
 			</div>
 		</div>
